--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
             </div>
             <div class="row mt-3">
                 <div class="col-4 text-center">
-                    <img src="images/group.png" class="legend-img">
+                    <img src="images/lane.png" class="legend-img">
                 </div>
                 <div class="col-4 text-center mb-5">
-                    <img src="images/group.png" class="legend-img">
+                    <img src="images/lane.png" class="legend-img">
                 </div>
             </div>
         </div>
